@@ -1,5 +1,8 @@
 2013-06-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* rcsc/player/world_model.cpp:
+	- ボール速度推定の不具合を修正
+
 	* rcsc/action/kick_table.cpp:
 	- キャッシュしておくパスの最大数を256から1024に変更
 	- デバッグ出力用の関数追加
